# Airport-Inspector

./: .gitignore
Airport_inspector/: CMakeLists.txt  database.cpp  database.h  dbdata.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  statistic.cpp  statistic.h  statistic.ui
